# InnoTodo

./: .env.sample  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: main.yaml
app/: config.py  db.py  kafka_client.py  tasks.py  utils.py
app/api/: routes.py
app/api/routers/: list.py  note.py  user.py
app/dependecies/: auth.py
app/interfaces/: repository.py
app/models/: __init__.py  list.py  note.py  user.py
app/repositories/: base.py  list.py  note.py  user.py
app/schemas/: list.py  note.py  user.py
app/services/: base.py  list.py  note.py  user.py
kubernetes/: core-app.yaml  core-config.yaml  ingress-config.yaml  ingress.yaml  kafka-config.yaml  kafka-pv.yaml  kafka-pvc.yaml  postgres-core-pv.yaml  postgres-core-pvc.yaml  postgres-core.yaml  zookeeper-kafka.yaml
migrations/: env.py
migrations/versions/: 7e1f662eddd7_init.py
nginx/: Dockerfile  nginx.conf
tests/: conftest.py  factories.py  fixtures.py
tests/dependecies/: test_auth.py
tests/repositories/: test_base.py  test_list.py
tests/routers/: test_list.py  test_note.py
tests/utils/: test_token_helper.py
