[tool.poetry]
name = "inno-todo"
version = "0.1.0"
description = ""
authors = ["FadingFog <fadingfog@github.com>"]
readme = "README.md"
packages = [{include = "inno_todo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.4"
asyncpg = "^0.27.0"
aiosqlite = "^0.18.0"
fastapi-signals = "^0.1.1"
aiokafka = "^0.8.0"
loguru = "^0.6.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
